Clean admin views

--- a/ShopFilip/Views/Admin/AddProduct.cshtml
+++ b/ShopFilip/Views/Admin/AddProduct.cshtml
@@ -1,140 +1,11 @@
 ﻿@model ShopFilip.Models.Product
-<link href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
-<style>
-    input[type="file"] {
-        display: none;
-    }
-
-    input[name="quantity"] {
-        width: 60px;
-        border: 4px solid gray;
-    }
-
-    #description {
-        border: 4px solid gray;
-    }
-
-    #name, #price {
-        border: 4px solid gray;
-    }
-
-    .label {
-        border: 1px solid #ccc;
-        display: inline-block;
-        padding: 6px 12px;
-        cursor: pointer;
-        border-radius: 5px;
-        border: solid gray 4px;
-    }
-
-        .label:hover {
-            color: white;
-            background-color: gray;
-        }
-
-    .modal {
-        z-index: 3;
-        overflow: visible;
-    }
-
-    #radio {
-        position: absolute;
-        opacity: 0;
-        width: 0;
-        height: 0;
-    }
-
-    [type=radio] + img {
-        cursor: pointer;
-        margin: 2px;
-    }
-
-    [type=radio]:checked + img {
-        outline: 2px solid #f00;
-    }
-
-    .button-style {
-        border-radius: 5px;
-        color: black;
-        padding: .5em;
-        text-decoration: none;
-        border: solid gray 4px;
-    }
-
-    #photo-min-product {
-        -webkit-filter: grayscale(100%);
-        filter: grayscale(100%);
-    }
-
-    .gallery {
-        display: flex;
-    }
-
-    #photo {
-        margin: 5px;
-        position: relative;
-    }
-
-    #x {
-        position: absolute;
-        background: white;
-        color: black;
-        top: -10px;
-        right: -10px;
-        z-index: 1;
-        cursor: pointer;
-        border: 4px solid #808080;
-        border-radius: 25px;
-    }
-
-        #x:hover {
-            color: white;
-            background: #808080;
-        }
-
-    #modal-set-center {
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        z-index: 9999;
-        bottom: auto;
-        padding-bottom: 0;
-        padding-top: 0;
-    }
-
-    .row {
-        border: solid gray 4px;
-        border-radius: 16px;
-    }
-
-    #add-table:hover {
-        color: white;
-        background-color: gray;
-        text-decoration: none;
-    }
-
-    #cancel {
-        color: black;
-        border: solid red 4px;
-    }
-        #cancel:hover {
-            background-color: red;
-            color: white;
-        }
-    #submit-form {
-        color: black;
-        border: solid green 4px;
-    }
-
-        #submit-form:hover {
-            background-color: green;
-            color: white;
-        }
-</style>
+@section CssLinks {
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
+    <link rel="stylesheet" type="text/css" href="~/css/Add-edit-product.css">
+}
+@{
+    ViewData["Title"] = ViewContext.RouteData.Values["action"].ToString();
+}
 <div class="container">
     <h1>Dodaj nowy produkt</h1>
     <form>
@@ -258,7 +129,7 @@
             </button>
         </div>
         <div style="width:50%;padding-top:10px;display:flex;justify-content:flex-end;">
-            <button class="btn" type="submit"  id="submit-form">
+            <button class="btn" type="submit" id="submit-form">
                 Zapisz!
             </button>
         </div>
@@ -277,166 +148,11 @@
         </div>
     </div>
 </div>
-<script src="~/js/CustomJavaScripts.js"></script>
-<script src="~/lib/jquery/dist/jquery.js"></script>
-<script>
-    $("#submit-form").click(function () {
-        SubmitForm()
-    });
-
-    $("#add-table").click(function () {
-        GetTables()
-    });
-
-    $("#button-add-table").click(function () {
-        var a = $('input[name="test"]:checked').val();
-        document.getElementById('table-photo-add').defaultValue = a;
-        $("#table-added").html(""); 
-        $("#table-added").append("<p>Dodano tabele: </p>" + a)
-    });
-
-    $('body').on('click', '#x', function () {
-        $(this).closest('div').remove();
-        let removePhoto = $(this).closest('div').children().eq(1).attr("src")
-        $.ajax({
-            url: "/Admin/RemoveFromDatabase",
-            type: "POST",
-            data: { 'path': removePhoto },
-            dataType: 'text',
-            success: function () {
-                if (response.success) {
-                    $("#getCode").html(resp);
-                    $("#getCodeModal").modal('show');
-                }
-            },
-        });
-    });
-
-    $('.size-container').change(function () {
-        if (this.checked) {
-            $(this).nextAll('input').first().show();
-        }
-        else {
-            $(this).nextAll('input').first().hide();
-        }
-    });
-
-    $("#gallery-photo-add").change(function () {
-        let files = document.getElementById('gallery-photo-add').files;
-        let data = new FormData();
-
-        for (var i = 0; i < files.length; i++) {
-            data.append(files[i].name, files[i]);
-        }
-        $.ajax({
-            url: "/Admin/AddNewPhotos",
-            type: "POST",
-            data: data,
-            processData: false,
-            contentType: false,
-            success: function (response) {
-                for (var i = 0; i < response.length; i++) {
-                    ImagesPreview(response[i], 'div.gallery');
-                }
-            },
-        });
-    });
-
-    $("#add-new-table").change(function () {
-        let fileUpload = $("#add-new-table").get(0);
-        let files = fileUpload.files;
-        let data = new FormData();
-
-        for (var i = 0; i < files.length; i++) {
-            data.append(files[i].name, files[i]);
-        }
-
-        $.ajax({
-            url: "/Admin/AddNewTable",
-            type: "POST",
-            data: data,
-            processData: false,
-            contentType: false,
-            success: function () {
-
-            },
-        });
-        GetTables();
-    });
-
-
-    function ImagesPreview(input, placeToInsertImagePreview) {
-        $(placeToInsertImagePreview).append("<div id='photo'><input id='x' type='button' value='X'><img name='photo-of-product' width='100px' id='photo-min-product' src='" + input + "'></div>");
-    }
-
-    function SubmitForm() {
-        let group = $("input[name='group']:checked").val();
-        let gender = $("input[name='gender']:checked").val();
-        let size = $("input[name='size']:checked").map(function () { return $(this).val(); }).get();
-        let quantity = $("input[name='quantity']").map(function () { return $(this).val(); }).get()
-        let table = document.getElementById("table-photo-add").value;
-        let name = $("#name").val()
-        let price = $("#price").val()
-        let description = $("#description").val().replace(/\n/g, "<br>")
-        let photos = $("img[name='photo-of-product']").map(function () { return $(this).attr("src"); }).get()
-        let id = $("#idOfProoduct").val();
-
-        var myData = {
-            Id: id,
-            Name: name,
-            Price: price,
-            Group: group,
-            Size: size,
-            Quantity: quantity,
-            Description: description,
-            Gender: gender,
-            Table: table,
-            Photos: photos,
-        }
-
-        $.ajax({
-            url: '/Admin/AddNewProduct',
-            type: 'POST',
-            dataType: "json",
-            contentType: 'application/json',
-            data: JSON.stringify(myData),
-            success: function (response) {
-                if (response.success) {
-                    console.log("siemano");
-                    $('#modal-set-center').modal('show');
-                }
-            },
-        });
-    }
-
-    $(function () {
-        var imagesPreview = function (input, placeToInsertImagePreview) {
-            if (input.files) {
-                let filesAmount = input.files.length;
-                for (i = 0; i < filesAmount; i++) {
-                    var reader = new FileReader();
-                    reader.onload = function (event) {
-                        $(placeToInsertImagePreview).append("<div id='photo'><input id='x' type='button' value='X'><img name='zdj' width='100px' id='photo-min-product' src='" + event.target.result + "'></div>");
-                    }
-                    reader.readAsDataURL(input.files[i]);
-                }
-            }
-        };
-
-        $('#table-photo-add').on('change', function () {
-            imagesPreview(this, 'div.table');
-        });
-    });
-
-    function GetTables() {
-        $('div#photos').empty();
-        $.getJSON("/Admin/GetAllTables", function (response) {
-            for (var i = 0; i < response.length; i++) {
-                var res = response[i].replace("C:\\Users\\Filip\\source\\repos\\Shop\\OnlineShop\\ShopFilip\\wwwroot", "");
-                $('div#photos').append('<label> <input type="radio" id="radio" name="test" value="' + res + '"  > <img  height="100px" src="' + res + '"></label>')
-            }
-        })
-    }
-</script>
-
-
+@section Scripts {
+    <script src="~/js/CustomJavaScripts.js"></script>
+    <script src="~/js/AddEditProduct.js"></script>
+    <script src="~/js/AddProduct.js"></script>
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
+}
