--- a/ShopFilip/Views/Admin/Index.cshtml
+++ b/ShopFilip/Views/Admin/Index.cshtml
@@ -1,8 +1,8 @@
-﻿@{
+﻿@model IEnumerable<ShopFilip.Models.OrderChart>
+@{
     Layout = "_Layout_Dashboard";
     ViewData["Title"] = "Admin Panel";
 }
-@model IEnumerable<ShopFilip.Models.OrderChart>
 <div class="container-fluid">
     <div class="row">
         <nav class="col-md-2 d-none d-md-block bg-light sidebar">
@@ -74,7 +74,6 @@
                 </ul>
             </div>
         </nav>
-
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
             <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
                 <h1 class="h2">Aktualna Sprzedaż </h1>
@@ -86,58 +85,14 @@
         </main>
     </div>
 </div>
-
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-<script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
-<script>
-    feather.replace()
-</script>
-<script src="~/lib/jquery/dist/jquery.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
-<script>
-    var lab = [];
-    var money = [];
-
-    var ctx = document.getElementById("myChart");
-    $.ajax({
-        url: '/Admin/GetOrdersInfo',
-        traditional: true,
-        success: function (response) {
-            for (var i = 0; i < response.length; i++) {
-                var b = response[i].date.substring(0, 10);
-                lab.push(b)
-                money.push(Number(response[i].sumOfMoney))
-                console.log(lab)
-            }
-            var myChart = new Chart(ctx, {
-                type: 'line',
-                data: {
-                    labels: lab,
-                    datasets: [{
-                        data: money,
-                        lineTension: 0,
-                        backgroundColor: 'transparent',
-                        borderColor: '#007bff',
-                        borderWidth: 4,
-                        pointBackgroundColor: '#007bff'
-                    }]
-                },
-                options: {
-                    scales: {
-                        yAxes: [{
-                            ticks: {
-                                beginAtZero: false
-                            }
-                        }]
-                    },
-                    legend: {
-                        display: false,
-                    }
-                }
-            });
-        }
-    });
-
-</script>
-
+@section Scripts {
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+    <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
+    <script>
+        feather.replace()
+    </script>
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
+    <script src="~/js/AdminDashboard.js"></script>
+}
