--- a/ShopFilip/Views/Admin/Orders.cshtml
+++ b/ShopFilip/Views/Admin/Orders.cshtml
@@ -25,7 +25,7 @@
                             <span style="font-size:10px" id="orderId">@itemo.OrderId</span><br>
                         </td>
                         <td>
-                            <select name="example" class="lala" id="combobox">
+                            <select name="example" class="status" id="combobox">
                                 @if (itemo.OrderStatus == "Paid")
                                 {
                                     <option selected="selected" value="@itemo.OrderStatus">@itemo.OrderStatus</option>
@@ -83,24 +83,7 @@
         </tbody>
     </table>
 </div>
-
-<script src="~/lib/jquery/dist/jquery.js"></script>
-<script>
-    $('.lala').on('change', function (e) {
-
-        selectedValue = $(this).find('option:selected').text();
-        orderId = $(this).closest('tr').find('td:eq(0)').find('#orderId').text();
-        GetPageData(selectedValue, orderId)
-    });
-
-    function GetPageData(seletedValue, orderId) {
-        $.ajax({
-            type: "post",
-            url: "/Admin/UpdateDataOrders?orderId=" + orderId + "&orderStatus=" + seletedValue + "",
-            contentType: "html",
-            success: function (result) {
-                console.log("sucess")
-            }
-        });
-    }
-</script>
+@section Scripts {
+    <script src="~/js/Orders.js"></script>
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+}
