Changes in product views add partial views

--- a/ShopFilip/Views/Admin/AddProduct.cshtml
+++ b/ShopFilip/Views/Admin/AddProduct.cshtml
@@ -136,15 +136,13 @@
     </div>
 </div>
 
-<div class="modal fade" id="modal-set-center">
+<div class="modal" id="modal-set-center">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body">
-                <p>Sucess!&hellip;</p>
+                <p style="text-align:center">Zaktualizowano pomyślnie!</p>
             </div>
-            <div class="modal-footer">
-                <button type="button" onclick="location.href='@Url.Action("Index", "Admin")'" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
+            <button type="button" onclick="location.href='@Url.Action("Index", "Admin")'" class="btn btn-default" data-dismiss="modal">Zamknij i zapisz</button>
         </div>
     </div>
 </div>
