Delete _Layout where unnecessary

--- a/ShopFilip/Views/Cart/Index.cshtml
+++ b/ShopFilip/Views/Cart/Index.cshtml
@@ -6,7 +6,7 @@
 @inject UserManager<ApplicationUser> UserManager
 @inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
 @{
-    ViewData["Title"] = "Koszyk";
+    ViewData["Title"] = "Shoppping cart";
 }
 @section CssLinks {
     <link rel="stylesheet" type="text/css" href="~/css/ShoppingCart.css">
