--- a/ShopFilip/Views/Admin/AddProduct.cshtml
+++ b/ShopFilip/Views/Admin/AddProduct.cshtml
@@ -26,12 +26,12 @@
                 <div class="form-group">
                     <label class="container">
                         Mężczyzna
-                        <input type="radio" checked="checked" name="gender" value="man">
+                        <input type="radio" checked="checked" name="gender" value="1">
                         <span class="checkmark"></span>
                     </label>
                     <label class="container">
                         Kobieta
-                        <input type="radio" name="gender" value="woman">
+                        <input type="radio" name="gender" value="0">
                         <span class="checkmark"></span>
                     </label>
                 </div>
