--- a/ShopFilip/Views/Admin/Edit.cshtml
+++ b/ShopFilip/Views/Admin/Edit.cshtml
@@ -29,7 +29,7 @@
                 <div class="form-group">
                     <label class="container">
                         Mężczyzna
-                        @if (Model.Gender == "man")
+                        @if ((int)Model.Gender == 1)
                         {
                             <input type="radio" checked="checked" name="gender" value="man">
                         }
@@ -41,7 +41,7 @@
                     </label>
                     <label class="container">
                         Kobieta
-                        @if (Model.Gender == "woman")
+                        @if ((int)Model.Gender == 0)
                         {
                             <input type="radio" checked="checked" name="gender" value="woman">
                         }
