--- a/ShopFilip/Views/Cart/Index.cshtml
+++ b/ShopFilip/Views/Cart/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using ShopFilip.IdentityModels
 @using System.Security.Claims
 @using Microsoft.AspNetCore.Identity
-@model ShopFilip.Models.Item
+@model ShopFilip.Models.ShoppingCartItem
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 @inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
