--- a/ShopFilip/Views/Product/_ProductThumbnail.cshtml
+++ b/ShopFilip/Views/Product/_ProductThumbnail.cshtml
@@ -1,4 +1,4 @@
-﻿@model ShopFilip.Models.ProductViewModel
+﻿@model ShopFilip.Models.Product
 
 <div class="productThumbnailContainer" data-productid="@Model.Id">
     <h4>@Model.Name</h4>
